Added authentication, Redis caching and Dockerfile
